--- a/src/index.html
+++ b/src/index.html
@@ -25,34 +25,95 @@
 </head>
 <body>
 <header id="header">
+    <div class="wrapper_nav">
+        <div class="container">
+            <nav class="mainmenu">
+                <div class="menu_items">
+                    <ul>
+                        <li class="active">
+                            <a href="/">
+                                <i class="fa fa-home" aria-hidden="true"></i>
+                                <span>Главная</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <span>События</span>
+                                <i class="fa fa-angle-down" aria-hidden="true"></i>
+                            </a>
+                            <ul class="dropdown">
+                                <li><a href="">Пункт 1</a></li>
+                                <li><a href="">Пункт 2</a></li>
+                                <li><a href="">Пункт 3</a></li>
+                                <li><a href="">Пункт 4</a></li>
+                                <li><a href="">Пункт 5</a></li>
+                            </ul>
+                        </li>
+                        <li>
 
+                            <span>О собаках</span>
+                            <i class="fa fa-angle-down" aria-hidden="true"></i>
+
+                            <ul class="dropdown">
+                                <li><a href="">Пункт 1</a></li>
+                                <li class="active"><a href="">Пункт 2</a></li>
+                                <li><a href="">Пункт 3</a></li>
+                                <li><a href="">Пункт 4</a></li>
+                                <li><a href="">Пункт 5</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="">
+                                <span>Объявления</span>
+                                <i class="fa fa-angle-down" aria-hidden="true"></i>
+                            </a>
+                            <ul class="dropdown">
+                                <li><a href="">Пункт 1</a></li>
+                                <li><a href="">Пункт 2</a></li>
+                                <li><a href="">Пункт 3</a></li>
+                                <li><a href="">Пункт 4</a></li>
+                                <li><a href="">Пункт 5</a></li>
+                            </ul>
+                        </li>
+                        <li><a href=""><span>Сообщество</span><i class="fa fa-angle-down" aria-hidden="true"></i></a>
+                        </li>
+                        <li><a href=""><span>Помощь</span><i class="fa fa-angle-down" aria-hidden="true"></i></a></li>
+                    </ul>
+
+                </div>
+                <div class="right_block">
+                    <div class="key">
+                        <i class="fa fa-key fa-lg" aria-hidden="true"></i>
+                        <span>Вход</span>
+                    </div>
+                    <div class="search"><i class="fa fa-search fa-lg" aria-hidden="true"></i>
+                        <span>Поиск</span></div>
+                </div>
+            </nav>
+        </div>
+    </div><!-- end /.wraper_nav-->
 </header>
 <section id="slider">
 
-<footer id="footer">
+    <footer id="footer">
 
-</footer>
-<div id="top_up">
-    <a href="#goToUp" class="flowing-scroll other-class">
-        <i class="fa fa-angle-double-up fa-4x" aria-hidden="true"></i>
-    </a>
-</div>
+    </footer>
 
-<!--[if lt IE 9]>
-<script src="libs/html5shiv/es5-shim.min.js"></script>
-<script src="libs/html5shiv/html5shiv.min.js"></script>
-<script src="libs/html5shiv/html5shiv-printshiv.min.js"></script>
-<script src="libs/respond/respond.min.js"></script>
-<![endif]-->
+    <!--[if lt IE 9]>
+    <script src="libs/html5shiv/es5-shim.min.js"></script>
+    <script src="libs/html5shiv/html5shiv.min.js"></script>
+    <script src="libs/html5shiv/html5shiv-printshiv.min.js"></script>
+    <script src="libs/respond/respond.min.js"></script>
+    <![endif]-->
 
 
-<script src="libs/jquery/jquery-3.3.1.min.js"></script>
-<script src="libs/bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
-<script src="libs/owl-carousel2-2.2.1/js/owl.carousel.min.js"></script>
-<script src="libs/scrollto/jquery.scrollTo.min.js"></script>
-<script src="js/common.js"></script>
+    <script src="libs/jquery/jquery-3.3.1.min.js"></script>
+    <script src="libs/bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
+    <script src="libs/owl-carousel2-2.2.1/js/owl.carousel.min.js"></script>
+    <script src="libs/scrollto/jquery.scrollTo.min.js"></script>
+    <script src="js/common.js"></script>
 
-<!-- Yandex.Metrika counter --><!-- /Yandex.Metrika counter -->
-<!-- Google Analytics counter --><!-- /Google Analytics counter -->
+    <!-- Yandex.Metrika counter --><!-- /Yandex.Metrika counter -->
+    <!-- Google Analytics counter --><!-- /Google Analytics counter -->
 </body>
 </html>
