--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
 <header id="header">
-    <div class="wrapper_nav">
+    <div class="wrapper_nav fixed-top">
         <div class="container">
             <nav class="mainmenu">
                 <div class="menu_items">
@@ -95,25 +95,26 @@
 </header>
 <section id="slider">
 
-    <footer id="footer">
+</section>
+<footer id="footer">
 
-    </footer>
+</footer>
 
-    <!--[if lt IE 9]>
-    <script src="libs/html5shiv/es5-shim.min.js"></script>
-    <script src="libs/html5shiv/html5shiv.min.js"></script>
-    <script src="libs/html5shiv/html5shiv-printshiv.min.js"></script>
-    <script src="libs/respond/respond.min.js"></script>
-    <![endif]-->
+<!--[if lt IE 9]>
+<script src="libs/html5shiv/es5-shim.min.js"></script>
+<script src="libs/html5shiv/html5shiv.min.js"></script>
+<script src="libs/html5shiv/html5shiv-printshiv.min.js"></script>
+<script src="libs/respond/respond.min.js"></script>
+<![endif]-->
 
 
-    <script src="libs/jquery/jquery-3.3.1.min.js"></script>
-    <script src="libs/bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
-    <script src="libs/owl-carousel2-2.2.1/js/owl.carousel.min.js"></script>
-    <script src="libs/scrollto/jquery.scrollTo.min.js"></script>
-    <script src="js/common.js"></script>
+<script src="libs/jquery/jquery-3.3.1.min.js"></script>
+<script src="libs/bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
+<script src="libs/owl-carousel2-2.2.1/js/owl.carousel.min.js"></script>
+<script src="libs/scrollto/jquery.scrollTo.min.js"></script>
+<script src="js/common.js"></script>
 
-    <!-- Yandex.Metrika counter --><!-- /Yandex.Metrika counter -->
-    <!-- Google Analytics counter --><!-- /Google Analytics counter -->
+<!-- Yandex.Metrika counter --><!-- /Yandex.Metrika counter -->
+<!-- Google Analytics counter --><!-- /Google Analytics counter -->
 </body>
 </html>
