Настроено отображение выпадающего меню

--- a/src/index.html
+++ b/src/index.html
@@ -49,14 +49,13 @@
                                 <li><a href="">Пункт 5</a></li>
                             </ul>
                         </li>
-                        <li>
-
+                        <li class="active">
                             <span>О собаках</span>
                             <i class="fa fa-angle-down" aria-hidden="true"></i>
 
                             <ul class="dropdown">
                                 <li><a href="">Пункт 1</a></li>
-                                <li class="active"><a href="">Пункт 2</a></li>
+                                <li class="active"><a href="">Пункт 2 Активный</a></li>
                                 <li><a href="">Пункт 3</a></li>
                                 <li><a href="">Пункт 4</a></li>
                                 <li><a href="">Пункт 5</a></li>
@@ -75,9 +74,31 @@
                                 <li><a href="">Пункт 5</a></li>
                             </ul>
                         </li>
-                        <li><a href=""><span>Сообщество</span><i class="fa fa-angle-down" aria-hidden="true"></i></a>
+                        <li>
+                            <span>Сообщество</span>
+                            <i class="fa fa-angle-down" aria-hidden="true"></i>
+
+                            <ul class="dropdown">
+                                <li><a href="">Пункт 1</a></li>
+                                <li><a href="">Пункт 2</a></li>
+                                <li><a href="">Пункт 3</a></li>
+                                <li><a href="">Пункт 4</a></li>
+                                <li><a href="">Пункт 5</a></li>
+                            </ul>
                         </li>
-                        <li><a href=""><span>Помощь</span><i class="fa fa-angle-down" aria-hidden="true"></i></a></li>
+                        <li>
+
+                            <span>Помощь</span>
+                            <i class="fa fa-angle-down" aria-hidden="true"></i>
+
+                            <ul class="dropdown">
+                                <li><a href="">Пункт 1</a></li>
+                                <li><a href="">Пункт 2</a></li>
+                                <li><a href="">Пункт 3</a></li>
+                                <li><a href="">Пункт 4</a></li>
+                                <li><a href="">Пункт 5</a></li>
+                            </ul>
+                        </li>
                     </ul>
 
                 </div>
