--- a/src/index.html
+++ b/src/index.html
@@ -176,6 +176,16 @@
 
                         </form>
                     </div>
+                    <div class="search_form">
+                        <form action="">
+                            <div class="icon_search">
+                                <img src="images/header/search_form/icon_search_form.png" alt="" width="100px">
+                            </div>
+                            
+                            Форма поиска
+                        </form>
+
+                    </div>
                 </div>
 
             </nav>
