Добавлена иконка нюхающей собаки в форму поиска

--- a/src/index.html
+++ b/src/index.html
@@ -181,6 +181,9 @@
                             <div class="icon_search">
                                 <img src="images/header/search_form/icon_search_form.png" alt="">
                             </div>
+                            <div class="icon_dog">
+                                <img src="images/header/search_form/icon_search_dog.png" alt="">
+                            </div>
                             <div class="field_search">
                                     <input name="searchword" id="mod-search-searchword138" maxlength="200" class="inputbox search-query input-medium" type="search" placeholder="Что ищем?">
                                     <button onclick="this.form.searchword.focus();">Найти</button>
