--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,79 @@
     <div class="wrapper_nav fixed-top">
         <div class="container">
             <nav class="mainmenu">
+                <div id="mobile_icon" class="mobile_icon">
+                    <i class="fa fa-bars fa-2x" aria-hidden="true"></i>
+                </div>
+                <div class="mobile_items">
+                    <ul>
+                        <li class="item-001 active">
+
+                            <i class="fa fa-home" aria-hidden="true"></i>
+                            <span>Главная</span>
+                        </li>
+                        <li class="item-002">
+                            <a href="">
+                                <span>События</span>
+                                <i class="fa fa-angle-down" aria-hidden="true"></i>
+                            </a>
+                            <ul class="dropdown">
+                                <li><a href="">Новости</a></li>
+                                <li><a href="">Выставки</a></li>
+                                <li><a href="">Мероприятия</a></li>
+                            </ul>
+                        </li>
+                        <li class="item-003 active">
+                            <span>О собаках</span>
+                            <i class="fa fa-angle-down" aria-hidden="true"></i>
+
+                            <ul class="dropdown">
+                                <li><a href="">Пункт 1</a></li>
+                                <li class="active"><a href="">Пункт 2 Активный</a></li>
+                                <li><a href="">Пункт 3</a></li>
+                                <li><a href="">Пункт 4</a></li>
+                                <li><a href="">Пункт 5</a></li>
+                            </ul>
+                        </li>
+                        <li class="item-004">
+                            <a href="">
+                                <span>Объявления</span>
+                                <i class="fa fa-angle-down" aria-hidden="true"></i>
+                            </a>
+                            <ul class="dropdown">
+                                <li><a href="">Пункт 1</a></li>
+                                <li><a href="">Пункт 2</a></li>
+                                <li><a href="">Пункт 3</a></li>
+                                <li><a href="">Пункт 4</a></li>
+                                <li><a href="">Пункт 5</a></li>
+                            </ul>
+                        </li>
+                        <li class="item-005">
+                            <span>Сообщество</span>
+                            <i class="fa fa-angle-down" aria-hidden="true"></i>
+
+                            <ul class="dropdown">
+                                <li><a href="">Пункт 1</a></li>
+                                <li><a href="">Пункт 2</a></li>
+                                <li><a href="">Пункт 3</a></li>
+                                <li><a href="">Пункт 4</a></li>
+                                <li><a href="">Пункт 5</a></li>
+                            </ul>
+                        </li>
+                        <li class="item-006">
+
+                            <span>Помощь</span>
+                            <i class="fa fa-angle-down" aria-hidden="true"></i>
+
+                            <ul class="dropdown">
+                                <li><a href="">Пункт 1</a></li>
+                                <li><a href="">Пункт 2</a></li>
+                                <li><a href="">Пункт 3</a></li>
+                                <li><a href="">Пункт 4</a></li>
+                                <li><a href="">Пункт 5</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
                 <div class="menu_items">
                     <ul>
                         <li class="item-001 active">
