Добавлено изображение логотипа сайта

--- a/src/index.html
+++ b/src/index.html
@@ -31,13 +31,13 @@
                 <div id="mobile_icon" class="mobile_icon">
                     <i class="fa fa-bars fa-2x" aria-hidden="true"></i>
                 </div>
-                <div class="mobile_items">
+                <div class="mobile_items d-lg-none">
                     <ul class="accordion" id="accordionMenu">
                         <li class="item-001 active">
                             <i class="fa fa-home" aria-hidden="true"></i>
                             <span>Главная</span>
                         </li>
-                        <li class="item-002 collapsed" data-toggle="collapse" data-target="#collapse2"
+                        <li class="item-002 collapsed active" data-toggle="collapse" data-target="#collapse2"
                             aria-expanded="false" aria-controls="collapse2">
                             <a href="">
                                 <span>События</span>
@@ -46,7 +46,7 @@
                             <ul id="collapse2" class="collapse dropdown" aria-labelledby="heading2"
                                 data-parent="#accordionMenu">
                                 <li><a href="">Новости</a></li>
-                                <li><a href="">Выставки</a></li>
+                                <li class="active"><span>Выставки</span></li>
                                 <li><a href="">Мероприятия</a></li>
                             </ul>
                         </li>
@@ -74,9 +74,14 @@
                                 <li><a href="">Словарь собаковода</a></li>
                             </ul>
                         </li>
+                        <li class="item-005">
+                            <a href="">
+                                <span>Помощь</span>
+                            </a>
+                        </li>
                     </ul>
                 </div>
-                <div class="menu_items">
+                <div class="menu_items ">
                     <ul>
                         <li class="item-001 active">
 
@@ -243,13 +248,202 @@
 
                     </div>
                 </div>
-
             </nav>
         </div>
     </div><!-- end /.wraper_nav-->
+    <div class="wrapper_logo">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">Логотип</div>
+                <div class="col-md-6">Банер</div>
+
+            </div>
+        </div>
+    </div><!--end /.wrapper_logo-->
 </header>
 <section id="slider">
     <a href="">Ссылка</a>
+    <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium at blanditiis, consectetur, enim harum,
+        laboriosam maiores minima non odio perspiciatis quam repudiandae sint sit suscipit tempore veniam voluptate
+        voluptatibus? Ipsa!
+    </div>
+    <div>Animi aut eveniet ex exercitationem impedit incidunt inventore ipsa magnam nisi numquam perferendis,
+        praesentium quaerat suscipit. Beatae consequatur consequuntur corporis dicta dolorum, ex explicabo inventore
+        ipsa maiores sequi, ut vel?
+    </div>
+    <div>Beatae consequuntur dolor doloribus eius eveniet id iusto laborum, provident quam qui, quod sed similique.
+        Alias blanditiis culpa eum ipsa, minus molestias officiis omnis perferendis placeat quibusdam repellendus sit
+        soluta.
+    </div>
+    <div>Consectetur dolor doloribus enim minima soluta! Atque dignissimos eaque fugit laudantium natus nemo nesciunt
+        nihil nisi obcaecati odio optio perferendis porro quae quibusdam quisquam reprehenderit, repudiandae sequi sit
+        voluptatem voluptatum.
+    </div>
+    <div>Ab accusantium architecto aut autem beatae corporis debitis dolore eligendi error explicabo itaque magni
+        mollitia necessitatibus nihil obcaecati odit officia, quaerat tempora tempore tenetur ut vel velit veritatis
+        vitae voluptates.
+    </div>
+    <div>Adipisci aliquid eius est excepturi harum magni natus non nostrum omnis quisquam sapiente, vel veniam
+        voluptatem. Accusantium aspernatur dolorem eos eveniet, illo, impedit ipsum iusto libero numquam obcaecati
+        quisquam quo.
+    </div>
+    <div>A at distinctio eum laudantium maiores odit quia quod quos reiciendis voluptatum? Alias, amet aspernatur at aut
+        dolores ea expedita inventore ipsa, ipsam magnam nostrum quasi quis saepe sequi totam?
+    </div>
+    <div>Consequuntur culpa eaque earum expedita, iste magnam mollitia praesentium. Alias aliquid aperiam atque
+        blanditiis dolores ex fuga harum impedit laboriosam, libero nemo nesciunt nisi odit perferendis, porro possimus
+        temporibus, vel!
+    </div>
+    <div>A aperiam architecto atque culpa cum debitis deleniti doloremque dolorum ducimus earum eos explicabo, itaque
+        iusto magni minima nam necessitatibus nihil nostrum officiis quo soluta, ut veritatis vitae voluptas voluptatum!
+    </div>
+    <div>Atque eius explicabo laborum officiis, reiciendis voluptatem? Doloribus labore modi natus voluptatibus! Aperiam
+        assumenda culpa dignissimos dolor iste labore, officia omnis, optio provident quasi quisquam quod recusandae
+        repellat sed vitae!
+    </div>
+    <div>Accusantium ad at autem, commodi cum eaque eum ex explicabo itaque minus, nihil non qui quia quis repellendus
+        repudiandae similique sint sit suscipit temporibus tenetur vel voluptatem. Animi aspernatur, beatae.
+    </div>
+    <div>Accusamus aut, doloribus iusto libero modi mollitia nisi provident quibusdam repellat repellendus sapiente
+        vero? Accusamus ad consequuntur debitis dolorum excepturi explicabo in voluptatem! Accusantium blanditiis
+        deserunt distinctio est quidem veritatis?
+    </div>
+    <div>A aliquid atque consequuntur cum, eius, enim esse fuga impedit in libero magnam minus molestiae molestias odio
+        quasi quia repudiandae sit soluta tempore velit vero voluptas voluptatibus. Ducimus, molestiae, odit!
+    </div>
+    <div>Blanditiis, deleniti impedit incidunt nesciunt placeat quis recusandae reiciendis rem voluptate voluptatem.
+        Aliquid assumenda consectetur dolor dolorem fugiat inventore itaque iusto laborum maxime nesciunt nostrum
+        reiciendis reprehenderit soluta tempora, vel.
+    </div>
+    <div>Aspernatur at beatae blanditiis consectetur consequuntur corporis, culpa dolores ea eligendi et eum excepturi
+        expedita facere iusto minima molestias nemo optio perferendis praesentium quas quasi repellendus, sed sint
+        soluta voluptatum?
+    </div>
+    <div>Assumenda consectetur delectus, dicta eos esse expedita fugit harum id nemo obcaecati officia, optio pariatur
+        quos reiciendis veniam vitae voluptatibus! Architecto consectetur exercitationem laborum natus reprehenderit
+        sequi sit tenetur velit.
+    </div>
+    <div>Amet esse excepturi itaque mollitia possimus rem repellat sunt! Aliquid aperiam, ea earum esse incidunt
+        laboriosam laborum magnam neque nisi, odio quas quibusdam, quis suscipit vel velit voluptas voluptate? Quaerat!
+    </div>
+    <div>Ad alias aliquam, architecto atque aut beatae deserunt dolores ducimus eius enim esse est exercitationem
+        expedita ipsum magni maiores minus modi molestias non perspiciatis porro possimus recusandae similique suscipit
+        veritatis.
+    </div>
+    <div>Accusantium alias aliquam aperiam consequatur dolores eaque eveniet expedita facilis laudantium nesciunt odit
+        quam saepe sit, voluptate voluptatem. Debitis deserunt dolorem et inventore itaque minima, necessitatibus
+        nesciunt officiis totam unde!
+    </div>
+    <div>Aliquid commodi cumque, deleniti, deserunt dicta distinctio eveniet illum impedit maiores nemo nobis odio
+        officiis pariatur perspiciatis provident quos ratione rem repellendus. Animi dicta quibusdam quidem! Eveniet
+        laboriosam praesentium quae!
+    </div>
+    <div>A ab accusantium aliquid autem consequuntur dolore dolorem eos expedita facere in minus non, perspiciatis quae
+        qui reiciendis rerum voluptas. Asperiores debitis dolores, et maxime praesentium provident qui ut voluptates.
+    </div>
+    <div>A accusamus aspernatur, aut commodi dicta distinctio dolores et eveniet expedita facere fugit iure maiores
+        nobis numquam pariatur perferendis porro provident quam quas qui quidem quis ratione sunt totam vero.
+    </div>
+    <div>Adipisci, animi corporis dolor iste maxime modi molestias, odio officia omnis porro quibusdam ratione sint
+        tempora! Dolor esse hic numquam placeat quam quisquam totam, velit. Accusantium dignissimos neque quas quasi!
+    </div>
+    <div>Aperiam blanditiis corporis cum distinctio dolorem ex excepturi expedita facilis hic ipsam itaque iure labore
+        laboriosam nam odio placeat, quae quibusdam quis quo repudiandae sunt tempore temporibus tenetur voluptas
+        voluptates!
+    </div>
+    <div>Ad alias animi atque, aut debitis, dolorem ea eligendi eum facere, harum magnam natus necessitatibus nemo neque
+        omnis pariatur praesentium quae quas quibusdam quo repellendus sunt unde velit voluptates voluptatum!
+    </div>
+    <div>A accusamus aut, consectetur cupiditate delectus, eos esse est eum facere id illum impedit inventore magnam
+        maiores nesciunt omnis praesentium quis quo quos, recusandae saepe unde ut veniam voluptas voluptates?
+    </div>
+    <div>Animi aperiam blanditiis cupiditate eligendi et, in ipsam iste neque nulla officiis perspiciatis quisquam
+        reprehenderit tempore! Consequuntur delectus eaque veniam? Architecto aut, doloremque eos itaque minima mollitia
+        praesentium reiciendis sunt?
+    </div>
+    <div>A ad aliquam aperiam architecto at blanditiis cupiditate debitis dicta dolore ea, esse ex inventore iure iusto
+        labore magni minus natus neque officia, omnis possimus quo sint vel voluptate, voluptatem.
+    </div>
+    <div>Ad asperiores aut commodi delectus, dolore doloremque doloribus exercitationem fugiat in laboriosam
+        necessitatibus nulla numquam optio perferendis porro provident quibusdam quo sint tempore totam velit veniam
+        vitae voluptates? Corporis, eius?
+    </div>
+    <div>Adipisci alias aperiam, asperiores assumenda beatae commodi consectetur culpa deleniti, dolorum eveniet
+        explicabo illum maxime odio, officia perferendis quae quam quas quod repellendus sed veniam veritatis voluptas.
+        Et, perspiciatis, ullam!
+    </div>
+    <div>A alias asperiores corporis dolor eum ipsa modi obcaecati repellat sed ullam. Aliquam asperiores error facere,
+        fugit incidunt itaque officia voluptate. Atque enim, est magnam nostrum quisquam rem sequi. Quas!
+    </div>
+    <div>Ab debitis delectus deserunt, expedita fugit harum id, in incidunt iure laboriosam minus natus perferendis
+        provident vel veniam. Aliquam animi, consequuntur deleniti esse est eveniet laborum possimus sequi ut
+        voluptates!
+    </div>
+    <div>Assumenda atque beatae debitis deserunt, dolorem ducimus ea eveniet ex in incidunt inventore, ipsa itaque
+        laboriosam laudantium necessitatibus nesciunt nisi officiis pariatur quaerat quam quia recusandae suscipit
+        veniam voluptas voluptatibus.
+    </div>
+    <div>Aut autem culpa iure necessitatibus quaerat quasi quos! Accusantium amet, aspernatur assumenda autem debitis ea
+        ex excepturi explicabo nemo non quas, quia quis rerum, sequi sint. Accusamus doloremque laboriosam neque.
+    </div>
+    <div>A aspernatur doloribus dolorum, minima neque nisi quod rem temporibus voluptate. Adipisci deleniti dolore
+        doloribus ea eum exercitationem explicabo itaque optio perspiciatis possimus quas quia quibusdam repudiandae
+        sunt tempore, vero!
+    </div>
+    <div>Ad at hic quae quas sed. Alias blanditiis consequatur cupiditate delectus, enim eos expedita facilis fugiat
+        fugit itaque laboriosam maiores obcaecati omnis quaerat, quo tenetur totam. Aperiam dolorum pariatur
+        reprehenderit.
+    </div>
+    <div>Dolorum ducimus ex harum illo maiores minima natus nostrum quod soluta, tenetur voluptas voluptate. Aliquam,
+        architecto atque dolore enim, excepturi facilis illo iusto maiores praesentium sed similique ut voluptate
+        voluptatibus!
+    </div>
+    <div>Aperiam, beatae delectus eum harum illo ipsa nemo neque nostrum officia officiis quas, repudiandae rerum
+        voluptatem! Alias atque dolores eaque hic, illum ipsum maxime neque nisi numquam odit, quidem voluptatibus!
+    </div>
+    <div>Accusamus accusantium blanditiis cum, debitis dolor, doloremque doloribus earum libero maiores nam nulla optio
+        quod ratione sint tenetur. Corporis cum ea sapiente veritatis? Aliquam impedit iste itaque sed similique unde!
+    </div>
+    <div>Ab amet dolore doloribus mollitia neque nobis quae reiciendis sequi suscipit. Aperiam blanditiis corporis
+        dolore dolorum eaque eius fuga libero sunt voluptates voluptatum! Dicta distinctio esse eum facilis fuga sed.
+    </div>
+    <div>Autem culpa delectus dolore excepturi libero nesciunt odio quia tempora tenetur vitae! Amet consectetur
+        consequuntur corporis dolore dolorum fuga inventore maxime minus natus quod. Iste, perferendis sunt? Iste
+        itaque, optio!
+    </div>
+    <div>Aliquam beatae, blanditiis corporis deleniti dignissimos doloribus, eius esse expedita impedit in incidunt
+        inventore iste, labore nihil nobis odit optio pariatur perspiciatis quasi quis repellendus saepe similique
+        soluta ut voluptate!
+    </div>
+    <div>Asperiores, ducimus eos esse, excepturi hic ipsum laborum nam natus nobis odit optio praesentium quasi
+        repellendus suscipit totam unde voluptas voluptatum. Beatae cupiditate dolorem molestiae natus repellat saepe
+        sit voluptate.
+    </div>
+    <div>Doloremque, molestiae, veritatis. Ab fugit libero officiis repudiandae. Aliquam aut enim et expedita maiores
+        repellendus reprehenderit tempora temporibus. Accusantium, aliquam aspernatur blanditiis eaque impedit iste
+        perferendis possimus quaerat sapiente soluta.
+    </div>
+    <div>A atque debitis omnis recusandae. Accusantium amet architecto aut consequuntur cupiditate dolorem doloremque
+        eaque earum et excepturi, hic inventore officiis, optio quasi sed ut vel. Iusto qui quod repudiandae soluta!
+    </div>
+    <div>Accusamus dicta impedit libero magnam nisi non optio quasi quisquam sunt tempore? Aliquam aut esse illo iste,
+        libero natus nostrum pariatur provident quaerat quos ratione tempora! Accusantium earum maxime nihil!
+    </div>
+    <div>Ab aliquam aliquid aperiam consequatur corporis cupiditate deleniti eaque eligendi eos eveniet id incidunt
+        maiores nemo nihil nisi officiis quam quia quisquam veniam, voluptatibus. Alias at beatae quos sequi sint.
+    </div>
+    <div>Aspernatur consequatur cumque eaque impedit ipsum itaque neque porro? Animi, reprehenderit veritatis. Earum
+        exercitationem fuga nam nulla odio odit quam quisquam unde. Assumenda deleniti dignissimos excepturi laudantium
+        molestias pariatur sit!
+    </div>
+    <div>Accusamus consectetur delectus doloremque est molestiae non quas quos saepe. Ad adipisci architecto blanditiis
+        consequatur consequuntur distinctio, dolorum est fugit incidunt laborum, neque repellat sunt. Ad deserunt
+        dolorem repellendus temporibus.
+    </div>
+    <div>Blanditiis distinctio, ducimus eaque eius fugiat magni maiores molestiae neque odio odit omnis pariatur quam
+        reiciendis sed sit vero voluptate. Accusamus dolor eveniet excepturi exercitationem inventore iure nostrum
+        porro, repellat.
+    </div>
 </section>
 <footer id="footer">
 
