--- a/src/index.html
+++ b/src/index.html
@@ -255,13 +255,13 @@
         <div class="container">
             <div class="row align-items-center align-items-center">
                 <div class="col-lg-6 col-md-12">
-                    <div class="row justify-content-center align-items-center">
-                        <div class="col-md-8 col-lg-8">
+                    <div class="row justify-content-start align-items-center">
+                        <div class="col-md-5 col-lg-5">
                             <div class="logo_img">
                                 <img src="images/header/logo_main.png" alt="">
                             </div>
                         </div>
-                        <div class="col-md-4 col-lg-4 ">
+                        <div class="col-md-7 col-lg-7 ">
                             <div class="logo_title">
                                 ProDogs.Info
                             </div>
